--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
-    background-image: url("yarn.jpeg");
+    background-image: url("numbers.jpeg");
     background-size: cover;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     text-align: center;
     height: 100vh;
 }
@@ -10,7 +10,7 @@ body {
     background: white;
     max-width: 80%;
     margin: auto;
-    border: 3px solid black;
+    border: 4px solid dark-blue;
     border-radius: 10px;
 }
 
@@ -37,11 +37,11 @@ button {
 }
 
 #increment-btn {
-    background: #2C2891;
+    background: #FF5733;
 }
 
 #save-btn {
-    background: #1C7947;
+    background: #DAF7A6;
 }
 
 #save-el {
