--- a/index.css
+++ b/index.css
@@ -7,10 +7,10 @@ body {
 }
 
 .container {
-    background: white;
+    background: #69adb6;
     max-width: 80%;
     margin: auto;
-    border: 4px solid dark-blue;
+    border: 4px solid #1b3539;
     border-radius: 10px;
 }
 
@@ -26,7 +26,7 @@ h2 {
 }
 
 button {
-    border: 1px solid black;
+    border: 1px solid #1b3539;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
