--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    background: #69adb6;
+    background: #add2d7;
     max-width: 80%;
     margin: auto;
     border: 4px solid #1b3539;
